13 module: threads https://apps.skillfactory.ru/learning/course/course-v1:SkillFactory+JAVA-14M+2021/block-v1:SkillFactory+JAVA-14M+2021+type@sequential+block@6b7d44ab5edc4d53b0c566f1324fa3a9/block-v1:SkillFactory+JAVA-14M+2021+type@vertical+block@93eff0190bd84858ab8cc09ded99dbc0