@@ -2,6 +2,8 @@ package com.sir.richard.boss.streams;
 // https://habr.com/ru/company/otus/blog/658999/
 
 import com.github.javafaker.Faker;
+import com.sir.richard.boss.model.animals.Animal;
+import com.sir.richard.boss.model.animals.Cat;
 import com.sir.richard.boss.model.dto.User;
 
 import java.util.*;
@@ -52,8 +54,8 @@ public class SampleStreams {
                 .stream()
                 .filter(u -> u.getAge() < 34)
                 .filter(u -> u.getFirstName().startsWith("A"))
-                .sorted(Comparator.comparing(User::getAge).thenComparing(User::getFirstName).thenComparing(User::getLastName))
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(User::getAge).reversed().thenComparing(User::getFirstName).thenComparing(User::getLastName))
+                .toList();
 
         String stringUsers = users.stream()
                 .map(User::toString)
@@ -71,16 +73,19 @@ public class SampleStreams {
     private void test2() {
         System.out.println("Test 2");
         userList.stream()
-                .map(u -> {
-                    return new User(
-                            u.getId(),
-                            "X " + u.getFirstName(),
-                            "Y " + u.getLastName(),
-                            u.getAge() + 10,
-                            u.getCapitalCity());
-                })
-                .collect(Collectors.toList())
+                .map(u -> new User(
+                        u.getId(),
+                        "X " + u.getFirstName(),
+                        "Y " + u.getLastName(),
+                        u.getAge() + 10,
+                        u.getCapitalCity()))
+                .toList()
                 .forEach(System.out::println);
+
+        List<Cat> cats = userList.stream().map(u -> new Cat(u.getFirstName())).toList();
+        cats.forEach(System.out::println);
+
+
     }
 
     private void test3() {
